src/components/Forms/SearchPlaces/style.module.less
@import '../../style/vars.less';
@inputWidth: 25rem;
@inputButtonMargin: 0.4rem;

.container {
  width: 100%;
  color: @white;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  margin-top: -@inputButtonMargin;
  --secondary-color: @white;
  @media (max-width: @breakPointM) {
    width: 100%;
    justify-content: center;
  }
}

.inputContainer {
  position: relative;
  width: 100%;
  margin-top: @inputButtonMargin;
  margin-bottom: @inputButtonMargin;
  color: var(--secondary-color);
  @media (max-width: @breakPointM) {
    width: 100%;
    margin-right: 0rem;
  }
}

.searchTitle {
  font-size: @DesktopFontSizeL;
  margin: 0;
  margin-right: 1rem;
}

.searchBar {
  &:focus {
    outline: none;
    box-shadow: inset 0 0 0 @borderWidthThick @aqua;
  }

  &.isNotInsideForm {
    border-radius: 25px;
    border-color: @aqua;
  }

  &.fullWidthInput {
    width: 100%;
  }

  border-radius: 0; // Possible iPhone fix
}

.suggestions {
  background-color: @white;
  font-weight: normal;
  font-size: @DesktopFontSizeM;
  list-style: none;
  margin-top: 0;
  max-height: 15rem;
  padding-left: 0;
  position: absolute;
  overflow-y: scroll;
  visibility: hidden;
  width: @inputWidth;
  z-index: 100;
  cursor: pointer;
  border: 1px solid @black;

  &.active {
    visibility: visible;
  }

  @media (max-width: @breakPointS) {
    width: 100%;
  }
}

.suggestionsItem {
  padding: 0.9rem 1.25rem;
  color: @black;

  &:not(:last-child) {
    border-bottom: 1px solid @greyMedium;
  }

  &:hover,
  &:focus,
  &.active {
    background-color: @greyBright;
    outline: none;
    color: @violet;
  }
}

.noSuggestionsItem {
  padding: 0.5rem 1.25rem;
  color: @greyMedium;
}

.sideButton {
  // TODO: Check if ok for profile
  margin-top: @inputButtonMargin;
  margin-bottom: @inputButtonMargin;
  margin-top: @inputButtonMargin;
  margin-bottom: @inputButtonMargin;
}

.profileSideButton {
  // TODO Check if working on municipality page
  margin-top: @inputButtonMargin;
  margin-bottom: @inputButtonMargin;
  color: @white;
  border: @white solid 1px;
}

